--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
     "path": "^0.12.7"
   }
