Add body-parser, method-override

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/nuasg/jobcat#readme",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "method-override": "^2.3.5",
     "mongoose": "^4.2.5",
     "morgan": "^1.6.1",
     "path": "^0.12.7"
